[tool.poetry]
name = "dmxspec"
version = "0.2.0"
description = "VU Meter for WiFi DMX LED Strip"
authors = ["Charles D'Aoust <charles.daoust@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.2"
sacn = "^1.4.6"
Colr = "^0.9.1"
cursor = "^1.3.4"
SoundCard = "^0.4.0"

[tool.poetry.dev-dependencies]
mypy = "*"
pylint = "*"
autopep8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
